--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,6 @@ install:
 script:
 - set -o pipefail && xcodebuild test -workspace Example/objc-rlite.xcworkspace -scheme objc-rlite-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
 - pod lib lint --quick
+
+notifications:
+  email: false
