--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,14 @@ language: objective-c
 # before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
+env:
+    matrix:
+    - XCODE_SDK=iphonesimulator
+    - XCODE_SDK=macosx
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild test -workspace Example/objc-rlite.xcworkspace -scheme objc-rlite-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+- set -o pipefail && xcodebuild test -workspace Example/objc-rlite.xcworkspace -scheme objc-rlite-Example -sdk ${XCODE_SDK} ONLY_ACTIVE_ARCH=NO | xcpretty -c
 - pod lib lint --quick
 
 notifications:
